<resources>
    <string name="app_name">LABActividad corte 2</string>
    <string name="sT_registar">Registar</string>
    <string name="st_iniciar_sesion">iniciar sesion</string>
    <string name="sT_nombre_del_usuario">Nombre del Usuario</string>
    <string name="sT_correo">Correo</string>
    <string name="sT_contrasena">Contraseña</string>
    <string name="sT_crear_cuenta">Crear cuenta</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sT_telefono">Telefono</string>
</resources>