<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.RegistroActivity">
    <androidx.appcompat.widget.Toolbar

        android:id="@+id/toolbarRegistro"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/ic_launcher_background"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:navigationIcon="@drawable/ic_back"

        />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarRegistro"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/tV_registro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sT_registar"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_Nusuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"

        >
        <EditText
            android:hint="@string/sT_nombre_del_usuario"
            android:id="@+id/eT_nombre_usuario_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:ems="10"
            android:inputType="textPersonName"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_Correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_Nusuario"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp">
        <EditText
            android:background="@color/white"
            android:hint="@string/sT_correo"
            android:id="@+id/eT_correo_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
             />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:passwordToggleEnabled="true"
        android:id="@+id/update_Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_Correo"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp">
    <EditText
        android:hint="@string/sT_contrasena"
        android:id="@+id/eT_password_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eT_correo_registro" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/update_Telefono"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_Password"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp">
    <EditText
        android:background="@color/white"
        android:hint="@string/sT_telefono"
        android:id="@+id/eT_Telfono_registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:onClick="CrearCuenta"
        android:backgroundTint="#0091EA"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="40dp"
        android:id="@+id/bT_registar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sT_crear_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/update_Telefono" />

</androidx.constraintlayout.widget.ConstraintLayout>