<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Activity.LoginActivity"
    >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/ic_launcher_background" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/correo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <EditText
            android:id="@+id/eT_correoLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/sT_correo"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="15dp"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/correo"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#060606">

        <EditText
            android:id="@+id/eT_passwordLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/sT_contrasena"
            android:inputType="textPassword"
            android:textColorHighlight="#FFFFFF"
            android:theme="@style/ThemeOverlay.AppCompat.Light" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:onClick="IniciarSesion"
        android:id="@+id/bT_Iniciar"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:backgroundTint="#00C853"
        android:text="@string/st_iniciar_sesion"
        app:layout_constraintEnd_toStartOf="@id/bT_registar"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password" />

    <Button
        android:onClick="Registro"
        android:backgroundTint="#0091EA"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="40dp"
        android:id="@+id/bT_registar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sT_registar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bT_Iniciar"
        app:layout_constraintTop_toBottomOf="@id/password" />
</androidx.constraintlayout.widget.ConstraintLayout>